tests/NormalTests/paczka1/fuzzy1/74050851.err
Error in line 4: xVF9qo7C A59 44,8
Error in line 14: 4hCre2cF A59 56,5
Error in line 23: xVF9qo7C A758 218,3
Error in line 27: A835 A758 18,36
